--- a/bsconfig.json
+++ b/bsconfig.json
@@ -15,6 +15,7 @@
   ],
   "suffix": ".bs.js",
   "namespace": true,
-  "bs-dependencies": ["reason-react"],
+  "bs-dependencies": ["reason-react", "reason-urql"],
+  "ppx-flags": ["graphql_ppx/ppx"],
   "refmt": 3
 }
