--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
   "license": "MIT",
   "dependencies": {
     "for-editor": "^0.3.0",
-    "next": "^9.0.3",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "reason-react": ">=0.7.0"
+    "reason-react": ">=0.7.0",
+    "reason-urql": "^1.0.0-beta.2"
   },
   "devDependencies": {
     "bs-platform": "^5.0.6",
     "css-loader": "^3.2.0",
+    "graphql_ppx": "^0.2.8",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.0.1",
