--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@emotion/core": "^10.0.16",
+    "@emotion/styled": "^10.0.15",
+    "@styled-system/css": "^5.0.23",
+    "emotion-theming": "^10.0.14",
     "for-editor": "^0.3.0",
     "reason-react": ">=0.7.0",
     "reason-urql": "^1.0.0-beta.2"
