--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack -w",
     "webpack:production": "NODE_ENV=production webpack",
-    "server": "webpack-dev-server"
+    "server": "webpack-dev-server",
+    "build:css": "postcss css/tailwind.css -o src/tailwind.css"
   },
   "keywords": [
     "BuckleScript"
@@ -25,11 +26,14 @@
     "reason-urql": "^1.0.0-beta.2"
   },
   "devDependencies": {
+    "autoprefixer": "^9.6.1",
     "bs-platform": "^5.0.6",
     "css-loader": "^3.2.0",
     "graphql_ppx": "^0.2.8",
     "html-webpack-plugin": "^3.2.0",
+    "postcss-cli": "^6.1.3",
     "style-loader": "^0.23.1",
+    "tailwindcss": "^1.1.2",
     "webpack": "^4.0.1",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.8"
