--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "@emotion/styled": "^10.0.15",
     "@styled-system/css": "^5.0.23",
     "emotion-theming": "^10.0.14",
-    "for-editor": "^0.3.0",
+    "for-editor": "^0.3.2",
+    "postcss-import": "^12.0.1",
+    "postcss-nested": "^4.1.2",
+    "postcss-nesting": "^7.0.1",
+    "react-markdown": "^4.1.0",
     "reason-react": ">=0.7.0",
-    "reason-urql": "^1.0.0-beta.2"
+    "reason-urql": "^1.0.0-beta.3"
   },
   "devDependencies": {
     "autoprefixer": "^9.6.1",
