--- a/bsconfig.json
+++ b/bsconfig.json
@@ -15,7 +15,7 @@
   ],
   "suffix": ".bs.js",
   "namespace": true,
-  "bs-dependencies": ["reason-react", "reason-urql"],
-  "ppx-flags": ["graphql_ppx/ppx"],
+  "bs-dependencies": ["reason-react", "reason-urql", "bs-reform"],
+  "ppx-flags": ["graphql_ppx/ppx", "lenses-ppx/ppx"],
   "refmt": 3
 }
