--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@emotion/core": "^10.0.16",
     "@emotion/styled": "^10.0.15",
     "@styled-system/css": "^5.0.23",
+    "antd": "^3.23.1",
+    "bs-reform": "^9.2.1",
     "emotion-theming": "^10.0.14",
     "for-editor": "^0.3.2",
+    "formik": "2.0.1-rc.13",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.1.2",
     "postcss-nesting": "^7.0.1",
@@ -36,6 +39,7 @@
     "css-loader": "^3.2.0",
     "graphql_ppx": "^0.2.8",
     "html-webpack-plugin": "^3.2.0",
+    "lenses-ppx": "4.0.0",
     "postcss-cli": "^6.1.3",
     "style-loader": "^0.23.1",
     "tailwindcss": "^1.1.2",
