--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.16",
     "@emotion/styled": "^10.0.15",
+    "@material-ui/core": "^4.4.0",
     "@styled-system/css": "^5.0.23",
     "antd": "^3.23.1",
     "bs-reform": "^9.2.1",
