--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "autoprefixer": "^9.6.1",
     "bs-platform": "^5.0.6",
     "css-loader": "^3.2.0",
+    "dotenv-webpack": "^1.7.0",
     "graphql_ppx": "^0.2.8",
     "html-webpack-plugin": "^3.2.0",
     "lenses-ppx": "4.0.0",
