--- a/package.json
+++ b/package.json
@@ -25,14 +25,17 @@
     "antd": "^3.23.2",
     "bs-reform": "^9.2.1",
     "emotion-theming": "^10.0.14",
+    "file-loader": "^4.2.0",
     "for-editor": "^0.3.4",
     "formik": "2.0.1-rc.13",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.1.2",
     "postcss-nesting": "^7.0.1",
-    "react-markdown": "^4.1.0",
+    "react-katex": "^2.0.2",
+    "react-markdown": "^4.2.2",
     "reason-react": ">=0.7.0",
-    "reason-urql": "^1.0.0-beta.3"
+    "reason-urql": "^1.0.0-beta.3",
+    "remark-math": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^9.6.1",
