--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@material-ui/core": "^4.4.0",
     "@styled-system/css": "^5.0.23",
     "antd": "^3.23.2",
+    "bs-fetch": "^0.5.0",
     "bs-reform": "^9.2.1",
     "emotion-theming": "^10.0.14",
     "file-loader": "^4.2.0",
@@ -33,8 +34,8 @@
     "postcss-nesting": "^7.0.1",
     "react-katex": "^2.0.2",
     "react-markdown": "^4.2.2",
-    "reason-react": ">=0.7.0",
-    "reason-urql": "^1.0.0-beta.3",
+    "reason-react": "^0.7.0",
+    "reason-urql": "^1.0.2",
     "remark-math": "^2.0.0"
   },
   "devDependencies": {
