--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "webpack:production": "NODE_ENV=production webpack",
     "server": "webpack-dev-server",
     "build:css": "postcss css/tailwind.css -o src/tailwind.css",
-    "deploy": "npm run clean && npm run build && npm run build:css && npm run webpack:production"
+    "deploy": "npm run clean && npm run build && npm run build:css && npm run webpack:production",
+    "generate-ppx-schema": "gqlschema http://localhost:4000/api -i -o graphql_schema.json"
   },
   "keywords": [
     "BuckleScript"
@@ -20,30 +21,31 @@
   "dependencies": {
     "@emotion/core": "^10.0.16",
     "@emotion/styled": "^10.0.15",
-    "@material-ui/core": "^4.4.0",
+    "@material-ui/core": "^4.8.0",
     "@styled-system/css": "^5.0.23",
-    "antd": "^3.23.2",
+    "antd": "^3.26.3",
     "bs-fetch": "^0.5.0",
+    "bs-platform": "^7.0.1",
     "bs-reform": "^9.2.1",
     "emotion-theming": "^10.0.14",
     "file-loader": "^4.2.0",
     "for-editor": "^0.3.4",
-    "formik": "2.0.1-rc.13",
+    "formik": "2.0.8",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.1.2",
     "postcss-nesting": "^7.0.1",
     "react-katex": "^2.0.2",
     "react-markdown": "^4.2.2",
     "reason-react": "^0.7.0",
-    "reason-urql": "^1.4.0",
+    "reason-urql": "^1.5.0",
     "remark-math": "^2.0.0"
   },
   "devDependencies": {
-    "@baransu/graphql_ppx_re": "^0.4.6",
+    "@baransu/graphql_ppx_re": "^0.6.1",
     "autoprefixer": "^9.6.1",
-    "bs-platform": "^7.0.1",
     "css-loader": "^3.2.0",
     "dotenv-webpack": "^1.7.0",
+    "gql-tools": "^0.0.15",
     "html-webpack-plugin": "^3.2.0",
     "lenses-ppx": "4.0.0",
     "postcss-cli": "^6.1.3",
