feat(Exam): add exam page

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -13,7 +13,7 @@
   "ppx-flags": ["reason-relay/ppx"],
   "sources": [
     { "dir": "common", "subdirs": true },
-    { "dir": "bindings" },
+    { "dir": "bindings", "subdirs": true },
     { "dir": "pages", "subdirs": true },
     { "dir": "components", "subdirs": true },
     "layouts"
