--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "license": "Apache License 2.0",
   "dependencies": {
     "@ahrefs/bs-emotion": "^1.0.1",
-    "@davesnx/styled-ppx": "^0.12.0",
+    "@ant-design/icons": "^4.2.1",
     "@fullhuman/postcss-purgecss": "^2.2.0",
     "@glennsl/bs-json": "^3.0.0",
     "@zeit/next-css": "^1.0.1",
-    "antd": "^4.2.3",
-    "bs-fetch": "^0.3.1",
+    "antd": "^4.3.0",
     "concurrently": "^5.2.0",
     "for-editor": "^0.3.5",
     "gentype": "^3.22.0",
