feat(Slate): add editor

--- a/package.json
+++ b/package.json
@@ -6,17 +6,25 @@
   "dependencies": {
     "@ahrefs/bs-emotion": "^1.0.1",
     "@ant-design/icons": "^4.2.1",
+    "@davesnx/styled-ppx": "^0.19.0",
     "@fullhuman/postcss-purgecss": "^2.2.0",
     "@glennsl/bs-json": "^3.0.0",
+    "@material-ui/core": "^4.10.0",
+    "@material-ui/icons": "^4.9.1",
     "@zeit/next-css": "^1.0.1",
     "antd": "^4.3.0",
+    "bs-fetch": "^0.5.2",
     "concurrently": "^5.2.0",
+    "dom-parser": "^0.1.6",
+    "emotion": "^10.0.27",
+    "escape-html": "^1.0.3",
     "for-editor": "^0.3.5",
-    "gentype": "^3.22.0",
+    "fuse.js": "^6.0.2",
+    "gentype": "^3.23.0",
     "graphql": "^15.0.0",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "^9.4.1",
+    "next": "^9.4.4",
     "next-transpile-modules": "^3.3.0",
     "ramda": "^0.27.0",
     "react": "0.0.0-experimental-d28bd2994",
@@ -32,6 +40,11 @@
     "relay-runtime": "^9.0.0",
     "remark-math": "^2.0.1",
     "request": "^2.88.0",
+    "slate": "^0.58.1",
+    "slate-history": "^0.58.1",
+    "slate-hyperscript": "^0.58.3",
+    "slate-plain-serializer": "^0.7.13",
+    "slate-react": "^0.58.2",
     "subscriptions-transport-ws": "^0.9.16"
   },
   "scripts": {
