--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@ahrefs/bs-emotion": "^1.0.1",
     "@ant-design/icons": "^4.2.1",
     "@davesnx/styled-ppx": "^0.19.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/pro-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.10",
     "@fullhuman/postcss-purgecss": "^2.2.0",
     "@glennsl/bs-json": "^3.0.0",
     "@material-ui/core": "^4.10.0",
